rust/bindings/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const TBMP_MAGIC: &[u8; 5] = b"tBMP\0";
pub const TBMP_MAGIC_LEN: u32 = 4;
pub const TBMP_MAX_PALETTE: u32 = 256;
pub const TBMP_BLOCK_SIZE: u32 = 8;
pub const TBMP_HEAD_WIRE_SIZE: u32 = 26;
pub const TBMP_MIN_FILE_SIZE: u32 = 30;
pub const TBMP_META_FIELD_MAX: u32 = 127;
pub const TBMP_META_KEY_MAX: u32 = 63;
pub const TBMP_META_TAG_MAX: u32 = 31;
pub const TBMP_META_MAX_TAGS: u32 = 16;
pub const TBMP_META_MAX_CUSTOM_ITEMS: u32 = 16;
pub const TBMP_META_CUSTOM_ITEM_MAX: u32 = 256;
pub const TBMP_META_ERR_NOT_A_MAP: i32 = -20;
pub const TBMP_META_ERR_BAD_KEY: i32 = -21;
pub const TBMP_META_ERR_TRUNCATED: i32 = -22;
pub const TBMP_META_ERR_REQUIRED_MISSING: i32 = -23;
pub const TBMP_META_ERR_TYPE_MISMATCH: i32 = -24;
pub const TBMP_META_ERR_LENGTH_OUT_OF_RANGE: i32 = -25;
pub const TBMP_META_ERR_SCHEMA_UNKNOWN_KEY: i32 = -26;
pub const TBMP_META_ERR_SCHEMA_DUPLICATE_KEY: i32 = -27;
pub const TBMP_HAS_FLOAT: u32 = 1;
pub const TBMP_ERR_NOT_SUPPORTED: i32 = -19;
pub const TBMP_ENCODING_TBMP_ENC_RAW: TBmpEncoding = 0;
pub const TBMP_ENCODING_TBMP_ENC_ZERO_RANGE: TBmpEncoding = 1;
pub const TBMP_ENCODING_TBMP_ENC_RLE: TBmpEncoding = 2;
pub const TBMP_ENCODING_TBMP_ENC_SPAN: TBmpEncoding = 3;
pub const TBMP_ENCODING_TBMP_ENC_SPARSE_PIXEL: TBmpEncoding = 4;
pub const TBMP_ENCODING_TBMP_ENC_BLOCK_SPARSE: TBmpEncoding = 5;
pub const TBMP_ENCODING_TBMP_ENC_MAX_: TBmpEncoding = 6;
pub type TBmpEncoding = ::std::os::raw::c_uint;
pub const TBMP_PIXEL_FORMAT_TBMP_FMT_INDEX_1: TBmpPixelFormat = 0;
pub const TBMP_PIXEL_FORMAT_TBMP_FMT_INDEX_2: TBmpPixelFormat = 1;
pub const TBMP_PIXEL_FORMAT_TBMP_FMT_INDEX_4: TBmpPixelFormat = 2;
pub const TBMP_PIXEL_FORMAT_TBMP_FMT_INDEX_8: TBmpPixelFormat = 3;
pub const TBMP_PIXEL_FORMAT_TBMP_FMT_RGB_565: TBmpPixelFormat = 4;
pub const TBMP_PIXEL_FORMAT_TBMP_FMT_RGB_555: TBmpPixelFormat = 5;
pub const TBMP_PIXEL_FORMAT_TBMP_FMT_RGB_444: TBmpPixelFormat = 6;
pub const TBMP_PIXEL_FORMAT_TBMP_FMT_RGB_332: TBmpPixelFormat = 7;
pub const TBMP_PIXEL_FORMAT_TBMP_FMT_RGB_888: TBmpPixelFormat = 8;
pub const TBMP_PIXEL_FORMAT_TBMP_FMT_RGBA_8888: TBmpPixelFormat = 9;
pub const TBMP_PIXEL_FORMAT_TBMP_FMT_CUSTOM: TBmpPixelFormat = 10;
pub const TBMP_PIXEL_FORMAT_TBMP_FMT_MAX_: TBmpPixelFormat = 11;
pub type TBmpPixelFormat = ::std::os::raw::c_uint;
pub const TBMP_ERROR_TBMP_OK: TBmpError = 0;
pub const TBMP_ERROR_TBMP_ERR_NULL_PTR: TBmpError = -1;
pub const TBMP_ERROR_TBMP_ERR_BAD_MAGIC: TBmpError = -2;
pub const TBMP_ERROR_TBMP_ERR_BAD_VERSION: TBmpError = -3;
pub const TBMP_ERROR_TBMP_ERR_BAD_BIT_DEPTH: TBmpError = -4;
pub const TBMP_ERROR_TBMP_ERR_BAD_ENCODING: TBmpError = -5;
pub const TBMP_ERROR_TBMP_ERR_BAD_PIXEL_FORMAT: TBmpError = -6;
pub const TBMP_ERROR_TBMP_ERR_BAD_DIMENSIONS: TBmpError = -7;
pub const TBMP_ERROR_TBMP_ERR_TRUNCATED: TBmpError = -8;
pub const TBMP_ERROR_TBMP_ERR_OVERFLOW: TBmpError = -9;
pub const TBMP_ERROR_TBMP_ERR_NO_PALETTE: TBmpError = -10;
pub const TBMP_ERROR_TBMP_ERR_NO_MASKS: TBmpError = -11;
pub const TBMP_ERROR_TBMP_ERR_BAD_PALETTE: TBmpError = -12;
pub const TBMP_ERROR_TBMP_ERR_BAD_SPAN: TBmpError = -13;
pub const TBMP_ERROR_TBMP_ERR_BAD_BLOCK: TBmpError = -14;
pub const TBMP_ERROR_TBMP_ERR_BAD_PIXEL_COORD: TBmpError = -15;
pub const TBMP_ERROR_TBMP_ERR_OUT_OF_MEMORY: TBmpError = -16;
pub const TBMP_ERROR_TBMP_ERR_ZERO_DIMENSIONS: TBmpError = -17;
pub const TBMP_ERROR_TBMP_ERR_INCONSISTENT: TBmpError = -18;
pub type TBmpError = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TBmpHead {
    pub version: u16,
    pub width: u16,
    pub height: u16,
    pub bit_depth: u8,
    pub encoding: u8,
    pub pixel_format: u8,
    pub flags: u8,
    pub data_size: u32,
    pub extra_size: u32,
    pub meta_size: u32,
    pub reserved: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of TBmpHead"][::std::mem::size_of::<TBmpHead>() - 28usize];
    ["Alignment of TBmpHead"][::std::mem::align_of::<TBmpHead>() - 4usize];
    ["Offset of field: TBmpHead::version"][::std::mem::offset_of!(TBmpHead, version) - 0usize];
    ["Offset of field: TBmpHead::width"][::std::mem::offset_of!(TBmpHead, width) - 2usize];
    ["Offset of field: TBmpHead::height"][::std::mem::offset_of!(TBmpHead, height) - 4usize];
    ["Offset of field: TBmpHead::bit_depth"][::std::mem::offset_of!(TBmpHead, bit_depth) - 6usize];
    ["Offset of field: TBmpHead::encoding"][::std::mem::offset_of!(TBmpHead, encoding) - 7usize];
    ["Offset of field: TBmpHead::pixel_format"]
        [::std::mem::offset_of!(TBmpHead, pixel_format) - 8usize];
    ["Offset of field: TBmpHead::flags"][::std::mem::offset_of!(TBmpHead, flags) - 9usize];
    ["Offset of field: TBmpHead::data_size"][::std::mem::offset_of!(TBmpHead, data_size) - 12usize];
    ["Offset of field: TBmpHead::extra_size"]
        [::std::mem::offset_of!(TBmpHead, extra_size) - 16usize];
    ["Offset of field: TBmpHead::meta_size"][::std::mem::offset_of!(TBmpHead, meta_size) - 20usize];
    ["Offset of field: TBmpHead::reserved"][::std::mem::offset_of!(TBmpHead, reserved) - 24usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TBmpRGBA {
    pub r: u8,
    pub g: u8,
    pub b: u8,
    pub a: u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of TBmpRGBA"][::std::mem::size_of::<TBmpRGBA>() - 4usize];
    ["Alignment of TBmpRGBA"][::std::mem::align_of::<TBmpRGBA>() - 1usize];
    ["Offset of field: TBmpRGBA::r"][::std::mem::offset_of!(TBmpRGBA, r) - 0usize];
    ["Offset of field: TBmpRGBA::g"][::std::mem::offset_of!(TBmpRGBA, g) - 1usize];
    ["Offset of field: TBmpRGBA::b"][::std::mem::offset_of!(TBmpRGBA, b) - 2usize];
    ["Offset of field: TBmpRGBA::a"][::std::mem::offset_of!(TBmpRGBA, a) - 3usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TBmpPalette {
    pub count: u32,
    pub entries: [TBmpRGBA; 256usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of TBmpPalette"][::std::mem::size_of::<TBmpPalette>() - 1028usize];
    ["Alignment of TBmpPalette"][::std::mem::align_of::<TBmpPalette>() - 4usize];
    ["Offset of field: TBmpPalette::count"][::std::mem::offset_of!(TBmpPalette, count) - 0usize];
    ["Offset of field: TBmpPalette::entries"]
        [::std::mem::offset_of!(TBmpPalette, entries) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TBmpMasks {
    pub r: u32,
    pub g: u32,
    pub b: u32,
    pub a: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of TBmpMasks"][::std::mem::size_of::<TBmpMasks>() - 16usize];
    ["Alignment of TBmpMasks"][::std::mem::align_of::<TBmpMasks>() - 4usize];
    ["Offset of field: TBmpMasks::r"][::std::mem::offset_of!(TBmpMasks, r) - 0usize];
    ["Offset of field: TBmpMasks::g"][::std::mem::offset_of!(TBmpMasks, g) - 4usize];
    ["Offset of field: TBmpMasks::b"][::std::mem::offset_of!(TBmpMasks, b) - 8usize];
    ["Offset of field: TBmpMasks::a"][::std::mem::offset_of!(TBmpMasks, a) - 12usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TBmpImage {
    pub head: TBmpHead,
    pub data: *const u8,
    pub data_len: usize,
    pub extra: *const u8,
    pub extra_len: usize,
    pub meta: *const u8,
    pub meta_len: usize,
    pub has_palette: ::std::os::raw::c_int,
    pub palette: TBmpPalette,
    pub has_masks: ::std::os::raw::c_int,
    pub masks: TBmpMasks,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of TBmpImage"][::std::mem::size_of::<TBmpImage>() - 1136usize];
    ["Alignment of TBmpImage"][::std::mem::align_of::<TBmpImage>() - 8usize];
    ["Offset of field: TBmpImage::head"][::std::mem::offset_of!(TBmpImage, head) - 0usize];
    ["Offset of field: TBmpImage::data"][::std::mem::offset_of!(TBmpImage, data) - 32usize];
    ["Offset of field: TBmpImage::data_len"][::std::mem::offset_of!(TBmpImage, data_len) - 40usize];
    ["Offset of field: TBmpImage::extra"][::std::mem::offset_of!(TBmpImage, extra) - 48usize];
    ["Offset of field: TBmpImage::extra_len"]
        [::std::mem::offset_of!(TBmpImage, extra_len) - 56usize];
    ["Offset of field: TBmpImage::meta"][::std::mem::offset_of!(TBmpImage, meta) - 64usize];
    ["Offset of field: TBmpImage::meta_len"][::std::mem::offset_of!(TBmpImage, meta_len) - 72usize];
    ["Offset of field: TBmpImage::has_palette"]
        [::std::mem::offset_of!(TBmpImage, has_palette) - 80usize];
    ["Offset of field: TBmpImage::palette"][::std::mem::offset_of!(TBmpImage, palette) - 84usize];
    ["Offset of field: TBmpImage::has_masks"]
        [::std::mem::offset_of!(TBmpImage, has_masks) - 1112usize];
    ["Offset of field: TBmpImage::masks"][::std::mem::offset_of!(TBmpImage, masks) - 1116usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TBmpFrame {
    pub width: u16,
    pub height: u16,
    pub pixels: *mut TBmpRGBA,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of TBmpFrame"][::std::mem::size_of::<TBmpFrame>() - 16usize];
    ["Alignment of TBmpFrame"][::std::mem::align_of::<TBmpFrame>() - 8usize];
    ["Offset of field: TBmpFrame::width"][::std::mem::offset_of!(TBmpFrame, width) - 0usize];
    ["Offset of field: TBmpFrame::height"][::std::mem::offset_of!(TBmpFrame, height) - 2usize];
    ["Offset of field: TBmpFrame::pixels"][::std::mem::offset_of!(TBmpFrame, pixels) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TBmpMetaCustomItem {
    pub len: u32,
    pub data: [u8; 256usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of TBmpMetaCustomItem"][::std::mem::size_of::<TBmpMetaCustomItem>() - 260usize];
    ["Alignment of TBmpMetaCustomItem"][::std::mem::align_of::<TBmpMetaCustomItem>() - 4usize];
    ["Offset of field: TBmpMetaCustomItem::len"]
        [::std::mem::offset_of!(TBmpMetaCustomItem, len) - 0usize];
    ["Offset of field: TBmpMetaCustomItem::data"]
        [::std::mem::offset_of!(TBmpMetaCustomItem, data) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TBmpMeta {
    pub title: [::std::os::raw::c_char; 128usize],
    pub author: [::std::os::raw::c_char; 128usize],
    pub description: [::std::os::raw::c_char; 128usize],
    pub created: [::std::os::raw::c_char; 128usize],
    pub software: [::std::os::raw::c_char; 128usize],
    pub license: [::std::os::raw::c_char; 128usize],
    pub has_dpi: u8,
    pub dpi: u32,
    pub colorspace: [::std::os::raw::c_char; 128usize],
    pub tag_count: u32,
    pub tags: [[::std::os::raw::c_char; 32usize]; 16usize],
    pub custom_count: u32,
    pub custom: [TBmpMetaCustomItem; 16usize],
}
